@@ -1,22 +1,21 @@
 package com.mypack.eval;
 
 import com.mypack.exp.Exp;
+import com.mypack.exp.Sexp;
 import com.mypack.exp.Symbol;
 import com.mypack.parser.LispParser;
 import com.mypack.util.AsSexp;
 import com.mypack.util.AsSymbol;
+import com.mypack.util.FindNumbers;
 import com.mypack.util.IsDefExpression;
-import com.mypack.vars.AnalysisResult;
-import com.mypack.vars.AnalysisVisitor;
-import com.mypack.vars.BetaVisitor;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-
-import static com.mypack.eval.LambdaExpression.union;
 
 public class Environment {
 
@@ -27,22 +26,27 @@ public class Environment {
     }
 
     public Exp eval(Exp exp) {
-        List<Exp> result = iterEval(exp, 100);
+        List<Exp> result = iterEval(exp, 10000);
         return result.get(result.size() - 1);
     }
 
     public void load(List<Exp> expressions) {
         for (Exp expression : expressions) {
-            Exp exp = resolve(expression);
-            if (IsDefExpression.test(exp)) {
-                List<? extends Exp> sexp = AsSexp.get(exp).asList();
-                if (sexp.size() != 3) {
-                    throw new IllegalArgumentException("Expecting 2 arguments but found " + (sexp.size() - 1));
-                }
-                Symbol symbol = AsSymbol.get(sexp.get(1));
-                definitions.put(symbol, sexp.get(2));
-            }
+            load(expression);
         }
+    }
+
+    private void load(Exp exp) {
+        if (!IsDefExpression.test(exp)) {
+            return;
+        }
+        List<? extends Exp> sexp = AsSexp.get(exp).asList();
+        if (sexp.size() != 3) {
+            throw new IllegalArgumentException("Expecting 2 arguments but found " + (sexp.size() - 1));
+        }
+        Symbol symbol = AsSymbol.get(sexp.get(1));
+        Exp definition = resolve(sexp.get(2));
+        definitions.put(symbol, definition);
     }
 
     public List<Exp> iterEval(Exp unresolvedExp, int max) {
@@ -61,23 +65,27 @@ public class Environment {
     }
 
     private Exp resolve(Exp exp) {
-        for (Map.Entry<Symbol, Exp> e : definitions.entrySet()) {
-            exp = resolve(exp, e.getKey());
+        Exp result = exp;
+        Set<Symbol> numbers = FindNumbers.search(exp);
+        for (Symbol number : numbers) {
+            LambdaExpression lambda = new LambdaExpression(Collections.singletonList(number), result);
+            result = lambda.apply(churchNumeral(Integer.parseInt(number.value())), definitions.keySet());
         }
-        return exp;
+        for (Map.Entry<Symbol, Exp> e : definitions.entrySet()) {
+            LambdaExpression lambda = new LambdaExpression(Collections.singletonList(e.getKey()), result);
+            result = lambda.apply(e.getValue(), definitions.keySet());
+        }
+        return result;
     }
 
-    private Exp resolve(Exp exp, Symbol symbol) {
-        AnalysisResult result = AnalysisVisitor.analyse(exp);
-        Exp definition = definitions.get(symbol);
-        AnalysisResult definitionResult = AnalysisVisitor.analyse(definition);
-        Set<Symbol> reservedSet = union(union(result.all(), definitions.keySet()), definitionResult.all());
-        for (Symbol reservedSymbol : result.bound()) {
-            Symbol alternative = LambdaExpression.findAlternative(reservedSymbol, reservedSet);
-            reservedSet = union(reservedSet, List.of(alternative));
-            definition = BetaVisitor.replace(definition, reservedSymbol, alternative);
+    static Exp churchNumeral(int n) {
+        Symbol x = Symbol.of("x");
+        Symbol f = Symbol.of("f");
+        Exp result = x;
+        for (int i = 0; i < n; i++) {
+            result = Sexp.create(f, Collections.singletonList(result));
         }
-        return BetaVisitor.replace(exp, symbol, definition);
+        return new LambdaExpression(Arrays.asList(f, x), result).toExp();
     }
 
     private static List<Exp> internalIterEval(Exp exp, int max) {
